--- a/AngularUI/src/app/app.component.html
+++ b/AngularUI/src/app/app.component.html
@@ -1,14 +1,20 @@
 <div class="container">
   <app-navi></app-navi>
   <div class="row">
-    <div class="col-md-3">
-      <app-brand></app-brand>
-      <app-color></app-color>
-      <app-customer></app-customer>
-      <app-rental></app-rental>
+    <div>
+      <app-car></app-car>
     </div>
-    <div class="col-md-9">
-        <app-car></app-car>
+    <div>
+      <app-brand></app-brand>
+    </div>
+    <div>
+      <app-color></app-color>
+    </div>
+    <div>
+      <app-customer></app-customer>
+    </div>
+    <div>
+      <app-rental></app-rental>
     </div>
   </div>
 </div>
