--- a/AngularUI/src/app/components/brand/brand.component.html
+++ b/AngularUI/src/app/components/brand/brand.component.html
@@ -1,1 +1,18 @@
-<p>brand works!</p>
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  
+  <table *ngIf="dataLoaded==true"  class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Marka Adı</th>
+      </tr>
+    </thead>
+  
+    <tr *ngFor="let brand of brands">
+      <td>{{ brand.id }}</td>
+      <td>{{ brand.brandName }}</td>
+    </tr>
+  </table>
+  
